+ Fixing bug with overflow on apppoiontment section

--- a/assets/section-appointments.css
+++ b/assets/section-appointments.css
@@ -5,6 +5,8 @@
 .appointment-section {
     border-top: 1px solid black; 
     border-bottom: 1px solid black; 
+    overflow: hidden;
+    position: relative;
 }
 
 @media screen and (min-width: 400px) {
