--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -283,7 +283,7 @@
 
 @media screen and (min-width: 940px) {
 .footer__logo {
-    width: 14rem;
+    width: 12rem;
     display: inline-block;
     align-self: self-end;
     margin-top: -3rem;
